Add asynchronous http request for tasks, add limitation of sending request function.